# namaris

./: .gitignore  CMakeLists.txt  CppToolsConfig.cmake.in  LICENSE  NamarisConfig.cmake.in  README.md  namaris-config.cmake.in
algorithms/: dijkstra_shortest_path.hpp  lccp_segmentation.hpp  min_cut.hpp  min_cut_plane_segmentation.hpp  pointcloud_occlusion_boundaries.hpp
algorithms/felzenswalb_graph_segmentation/: disjoint-set.h  disjoint-set.hpp  felzenswalb_graph_segmentation.cpp  segment-graph.cpp  segment-graph.hpp
algorithms/meanshift/: meanshift.cpp  meanshift.h
algorithms/meanshift/meanshiftlib/: CMakeLists.txt
algorithms/meanshift/meanshiftlib/include/: FilterDefinitions.h  MeanShift.h  VectorPointSet.h
algorithms/meanshift/meanshiftlib/src/: MeanShift.cpp  PointSet.cpp
algorithms/region_growing/: region_growing.h
algorithms/region_growing_normal_variation/: region_growing_normal_variation.hpp
cmake_modules/: FindPackage.cmake.in
include/algorithms/: pointcloud_alignment.hpp  region_growing_plane_segmentation.hpp  supervoxel_segmentation.hpp
include/algorithms/felzenswalb_graph_segmentation/: disjoint-set.cpp  felzenswalb_graph_segmentation.h  felzenswalb_graph_segmentation.hpp  segment-graph.h
include/algorithms/felzenswalb_segmentation/: felzenswalb_segmentation.h  felzenswalb_segmentation.hpp
include/algorithms/meanshift/geometry/include/: Geometry.h
include/algorithms/meanshift/meanshiftlib/include/: CountedPointer.h
include/algorithms/meanshift/meanshiftlib/src/: VectorPointSet.cpp
include/namaris/algorithms/: lccp_segmentation.hpp  min_cut_plane_segmentation.hpp  mst.hpp  pointcloud_occlusion_boundaries.hpp  region_growing_plane_segmentation.hpp  supervoxel_segmentation.hpp
include/namaris/algorithms/felzenswalb_graph_segmentation/: felzenswalb_graph_segmentation.h  felzenswalb_graph_segmentation.hpp
include/namaris/algorithms/felzenswalb_segmentation/: felzenswalb_segmentation.hpp
include/namaris/algorithms/meanshift/: meanshift.h  meanshift.hpp
include/namaris/algorithms/region_growing/: region_growing.h  region_growing.hpp
include/namaris/algorithms/region_growing_normal_variation/: region_growing_normal_variation.h  region_growing_normal_variation.hpp
include/namaris/algorithms/region_growing_smoothness/: region_growing_smoothness.h  region_growing_smoothness.hpp
include/namaris/utilities/: eigen.hpp  filesystem.hpp  geometry.hpp  graph.hpp  kinect.hpp  map.hpp  math.hpp  octomap_pcl_conversion.hpp  pcl_typedefs.hpp  pcl_visualization.hpp  pointcloud.hpp  pointcloud_old.hpp  pointcloud_segmentation_io.hpp  reconstruction.hpp  string.hpp  vtk_mesh.hpp
include/namaris/utilities/alphanum/: alphanum.cpp
include/namaris/utilities/pcl_visualization/: color.h  color.hpp  vtk_colormaps.h  vtk_colormaps.hpp
include/utilities/: eigen.hpp  filesystem.hpp  geometry.hpp  map.hpp  octomap_pcl_conversion.hpp  opencv.hpp  opencv_calibration.hpp  pcl_visualization.hpp  pointcloud.hpp  std_vector.hpp  vtk_mesh.hpp
sample_pcl_viewer/: CMakeLists.txt  cloud.pcd
sample_pcl_viewer/include/: vis.hpp
sample_pcl_viewer/src/: main.cpp
utilities/: .math.hpp (aecins-nuc's conflicted copy 2015-07-26).kate-swp  geometry.hpp  kinect.hpp  opencv_calibration.hpp  opencv_depth.hpp  pcl_visualization.hpp  pointcloud.hpp  pointcloud_old.hpp  string.hpp
utilities/pcl_visualization/: color.hpp  vtk_colormaps.h  vtk_colormaps.hpp  vtk_colormaps_lut.hpp
